--- a/Movies.Api.Sdk.Consumer/Movies.Api.Sdk.Consumer.csproj
+++ b/Movies.Api.Sdk.Consumer/Movies.Api.Sdk.Consumer.csproj
@@ -10,6 +10,7 @@
   <ItemGroup>
     <PackageReference Include="Microsoft.Extensions.DependencyInjection" Version="7.0.0" />
     <PackageReference Include="Refit.HttpClientFactory" Version="7.0.0" />
+    <PackageReference Include="System.IdentityModel.Tokens.Jwt" Version="7.0.2" />
   </ItemGroup>
 
   <ItemGroup>
